--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="styles.css" rel="stylesheet">
   <script defer src="game.js"></script>
-  <title>Text Adventure</title>
+  <title>The Text Adventure Game</title>
 </head>
 <body>
   <div class="container">
